# claude-quickstarts

./: README.md
computer-use-fastapi-server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
computer-use-fastapi-server/app/: database.py  router.py  settings.py
computer-use-fastapi-server/app/base/: db_base_services.py  logger.py  models.py  test_base.py  views.py
computer-use-fastapi-server/app/base/tests/: test_ping.json
computer-use-fastapi-server/app/sessions/: __init__.py  models.py  schemas.py  services.py  views.py
computer-use-fastapi-server/app/templates/: base.html  session_detail.html  sessions_list.html
computer-use-fastapi-server/app/ui/: __init__.py  views.py
